--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="tabs">
       <a href="index.html">Home</a>
       <a href="stack.html" class="data-structure-link">Stack</a>
-      <a href="queue.html" class="data-structure-link">Queue</a>
+      <a href="queue.html" class="data-links">Queue</a>
       <a href="linkedlist.html" class="data-structure-link">Linked List</a>
     </div>
     <div class="site-name">@Data Structures Visualization</div>
