add tab in top footer

--- a/data-structures/linked-list.html
+++ b/data-structures/linked-list.html
@@ -5,11 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Linked List Visualization</title>
   <link rel="stylesheet" href="../styles/style.css">
-  <link rel="stylesheet" href="../styles/ds.css">>
+  <link rel="stylesheet" href="../styles/ds.css">
   <script src="../scripts/visualizations/linked-list.js" defer></script>
 </head>
-<body>
-  <!-- Top Footer -->
+<body class="linked-list">
+
+  <!-- Top Navigation -->
   <header class="top-footer">
     <div class="site-name">Data Structures Visualization</div>
     <div class="tabs">
@@ -19,9 +20,9 @@
 
   <!-- Main Content -->
   <main>
+    <!-- Page Title -->
     <div class="ds-header">
       <h1 class="title">Linked List</h1>
-      <!-- <img src="../assets/illustrations/linked-list.png" alt="Linked List Illustration" class="stack-image"> -->
     </div>
 
     <!-- What is it Section -->
@@ -30,7 +31,7 @@
       <p>A Linked List is a linear data structure where each element is a node. Each node contains a value and a reference to the next node in the sequence. Linked Lists allow for dynamic memory allocation and efficient insertion or deletion operations.</p>
     </section>
 
-    <!-- Time Complexity -->
+    <!-- Time and Space Complexity Section -->
     <section class="box">
       <h2>Time and Space Complexity</h2>
       <table>
@@ -57,7 +58,7 @@
       </table>
     </section>
 
-    <!-- Properties -->
+    <!-- Properties Section -->
     <section class="box">
       <h2>Properties</h2>
       <ul class="spaced-list">
@@ -89,11 +90,9 @@
       </div>
     </section>
 
-    
-
-    <!-- Pros and Cons -->
+    <!-- Advantages and Disadvantages Section -->
     <section class="box">
-      <h2>Pros and Cons</h2>
+      <h2>Advantages and Disadvantages</h2>
       <div class="pros-cons">
         <div class="advantages">
           <p>✅ Dynamic size, flexible memory usage.</p>
@@ -108,7 +107,7 @@
       </div>
     </section>
 
-    <!-- Possible Implementations -->
+    <!-- Possible Implementations Section -->
     <section class="box">
       <h2>Possible Implementations</h2>
       <div class="implementations">
@@ -126,13 +125,13 @@
         </div>
       </div>
     </section>
-
-    <!-- Git Icon -->
-    <div class="git-icon">
-      <a href="https://github.com/erezofir" target="_blank">
-        <img src="../assets/icons/git-circle.svg" alt="GitHub">
-      </a>
-    </div>
   </main>
+
+  <!-- GitHub Icon -->
+  <div class="git-icon">
+    <a href="https://github.com/erezofir" target="_blank">
+      <img src="../assets/icons/git-circle.svg" alt="GitHub">
+    </a>
+  </div>
 </body>
 </html>
