--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <header class="top-footer">
     <div class="tabs">
       <a href="index.html">Home</a>
-      <a href="stack.html" class="data-structure-link">Stack</a>
-      <a href="queue.html" class="data-links">Queue</a>
-      <a href="linkedlist.html" class="data-structure-link">Linked List</a>
+      <a href="data-structures/stack.html" class="data-structure-link">Stack</a>
+      <a href="data-structures/queue.html" class="data-structure-link">Queue</a>
+      <a href="data-structures/linked-list.html" class="data-structure-link">Linked List</a>
     </div>
     <div class="site-name">@Data Structures Visualization</div>
   </header>
