add tab in top footer

--- a/footer.html
+++ b/footer.html
@@ -19,6 +19,6 @@
 <!-- GitHub Icon -->
 <div class="git-icon">
   <a href="https://github.com/erezofir" target="_blank">
-    <img src="assets/icons/git-circle.svg" alt="GitHub">
+    <img src="../assets/icons/git-circle.svg" alt="GitHub">
   </a>
 </div>
