add tab in top footer

--- a/footer.html
+++ b/footer.html
@@ -9,7 +9,7 @@
 <header class="top-footer">
   <div class="tabs">
     <a href="index.html">Home</a>
-    <a href="data-structures/stack.html" class="data-structure-link">Stack</a>
+    <a href="../data-structures/stack.html" class="data-structure-link">Stack</a>
     <a href="data-structures/queue.html" class="data-structure-link">Queue</a>
     <a href="data-structures/linked-list.html" class="data-structure-link">Linked List</a>
     <a href="data-structures/array.html" class="data-structure-link">Array</a>
