add tab in top footer

--- a/footer.html
+++ b/footer.html
@@ -8,14 +8,14 @@
 
 <header class="top-footer">
   <div class="tabs">
-    <a href="index.html">Home</a>
+    <a href="../index.html">Home</a>
     <a href="../data-structures/stack.html" class="data-structure-link">Stack</a>
-    <a href="data-structures/queue.html" class="data-structure-link">Queue</a>
-    <a href="data-structures/linked-list.html" class="data-structure-link">Linked List</a>
-    <a href="data-structures/array.html" class="data-structure-link">Array</a>
-    <a href="data-structures/hash-table.html" class="data-structure-link">Hash-Table</a>
-    <a href="data-structures/heap.html" class="data-structure-link">Heap</a>
-    <a href="data-structures/tree.html" class="data-structure-link">Tree</a>
+    <a href="../data-structures/queue.html" class="data-structure-link">Queue</a>
+    <a href="../data-structures/linked-list.html" class="data-structure-link">Linked List</a>
+    <a href="../data-structures/array.html" class="data-structure-link">Array</a>
+    <a href="../data-structures/hash-table.html" class="data-structure-link">Hash-Table</a>
+    <a href="../data-structures/heap.html" class="data-structure-link">Heap</a>
+    <a href="../data-structures/tree.html" class="data-structure-link">Tree</a>
   </div>
   <div class="site-name">@Data Structures Visualization</div>
 </header>
