--- a/data-structures/graph.html
+++ b/data-structures/graph.html
@@ -10,13 +10,17 @@
 </head>
 <body class="graph">
 
-  <!-- Top Navigation -->
-  <header class="top-footer">
-    <div class="site-name">Data Structures Visualization</div>
-    <div class="tabs">
-      <a href="../index.html">Home</a>
-    </div>
-  </header>
+  <!-- Footer -->
+  <div id="footer-placeholder"></div>
+  <script>
+    // Load the footer from footer.html
+    fetch("../footer.html")
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById("footer-placeholder").innerHTML = data;
+      })
+      .catch(error => console.error("Error loading footer:", error));
+  </script>
 
   <!-- Main Content -->
   <main>
@@ -101,12 +105,5 @@
       </div>
     </section>
   </main>
-
-  <!-- GitHub Icon -->
-  <div class="git-icon">
-    <a href="https://github.com/erezofir" target="_blank">
-      <img src="../assets/icons/git-circle.svg" alt="GitHub">
-    </a>
-  </div>
 </body>
 </html>
