--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="footer-placeholder"></div>
   <script>
     // Load the footer from footer.html
-    fetch("../footer.html")
+    fetch("footer.html")
       .then(response => response.text())
       .then(data => {
         document.getElementById("footer-placeholder").innerHTML = data;
