--- a/footer.html
+++ b/footer.html
@@ -18,6 +18,8 @@
     <a href="../data-structures/tree.html" class="data-structure-link">Tree</a>
   </div>
   <div class="site-name">@Data Structures Visualization</div>
+   <!-- Dark Mode Toggle -->
+  <button id="toggle-dark-mode" class="dark-mode-button">🌙 Dark Mode</button>
 </header>
 
 <!-- GitHub Icon -->
