add setting button

--- a/footer.html
+++ b/footer.html
@@ -18,8 +18,6 @@
     <a href="../data-structures/tree.html" class="data-structure-link">Tree</a>
   </div>
   <div class="site-name">@Data Structures Visualization</div>
-   <!-- Dark Mode Toggle -->
-  <button id="toggle-dark-mode" class="dark-mode-button">🌙 Dark Mode</button>
 </header>
 
 <!-- GitHub Icon -->
@@ -27,4 +25,19 @@
   <a href="https://github.com/erezofir" target="_blank">
     <img src="../assets/icons/git-circle.svg" alt="GitHub">
   </a>
+</div>
+
+<div class="settings-menu">
+  <div class="settings-button">
+    <img src="assets/icons/settings.svg" alt="Settings" />
+  </div>
+  <div class="settings-options">
+    <div class="settings-option" id="toggle-dark-mode">
+      <img src="assets/icons/moon.svg" alt="Dark Mode" />
+    </div>
+    <div class="settings-option" id="toggle-music">
+      <img src="assets/icons/music.svg" alt="Music" />
+    </div>
+    <!-- ניתן להוסיף אופציות נוספות כאן -->
+  </div>
 </div>
