add setting button

--- a/footer.html
+++ b/footer.html
@@ -29,7 +29,7 @@
 
 <div class="settings-menu">
   <div class="settings-button">
-    <img src="assets/icons/settings.svg" target="_blank" alt="Settings" />
+    <img src="assets/icons/settings.svg" alt="Settings" />
   </div>
   <div class="settings-options">
     <div class="settings-option" id="toggle-dark-mode">
