--- a/index.html
+++ b/index.html
@@ -100,6 +100,21 @@
     </a>
   </div>
 
+  <div class="settings-menu">
+    <div class="settings-button">
+      <img src="assets/icons/settings.svg" alt="Settings" />
+    </div>
+    <div class="settings-options">
+      <div class="settings-option" id="toggle-dark-mode">
+        <img src="assets/icons/moon.svg" alt="Dark Mode" />
+      </div>
+      <div class="settings-option" id="toggle-music">
+        <img src="assets/icons/music.svg" alt="Music" />
+      </div>
+      <!-- ניתן להוסיף אופציות נוספות כאן -->
+    </div>
+  </div>
+
   <!-- Scripts -->
   <script src="scripts/main.js"></script>
 </body>
