add setting button

--- a/footer.html
+++ b/footer.html
@@ -29,14 +29,14 @@
 
 <div class="settings-menu">
   <div class="settings-button">
-    <img src="assets/icons/settings.svg" alt="Settings" />
+    <img src="../assets/icons/settings.svg" alt="Settings" />
   </div>
   <div class="settings-options">
     <div class="settings-option" id="toggle-dark-mode">
-      <img src="assets/icons/moon.svg" alt="Dark Mode" />
+      <img src="../assets/icons/moon.svg" alt="Dark Mode" />
     </div>
     <div class="settings-option" id="toggle-music">
-      <img src="assets/icons/music.svg" alt="Music" />
+      <img src="../assets/icons/music.svg" alt="Music" />
     </div>
     <!-- ניתן להוסיף אופציות נוספות כאן -->
   </div>
