--- a/footer.html
+++ b/footer.html
@@ -19,7 +19,7 @@
   </div>
   <div class="site-name">@Data Structures Visualization</div>
 </header>
-
+זה
 <!-- GitHub Icon -->
 <div class="git-icon">
   <a href="https://github.com/erezofir" target="_blank">
@@ -27,17 +27,18 @@
   </a>
 </div>
 
-<div class="settings-menu">
-  <div class="settings-button">
-    <img src="../assets/icons/settings.svg" alt="Settings" />
+<div class="floating-container">
+  <div class="floating-button">
+    <img src="../assets/icons/settings.svg" height="30" width="30" alt="Settings">
   </div>
-  <div class="settings-options">
-    <div class="settings-option" id="toggle-dark-mode">
-      <img src="../assets/icons/moon.svg" alt="Dark Mode" />
+  <div class="element-container">
+    <div class="float-element">
+      <img src="../assets/icons/moon.svg" height="25" width="25" alt="Dark Mode" id="toggle-dark-mode">
     </div>
-    <div class="settings-option" id="toggle-music">
-      <img src="../assets/icons/music.svg" alt="Music" />
+    <div class="float-element">
+      <img src="../assets/icons/music.svg" height="25" width="25" alt="Music" id="toggle-music">
     </div>
-    <!-- ניתן להוסיף אופציות נוספות כאן -->
+    <!-- ניתן להוסיף אלמנטים נוספים כאן -->
   </div>
 </div>
+
