add setting button

--- a/footer.html
+++ b/footer.html
@@ -32,11 +32,13 @@
     <img src="../assets/icons/settings.svg" height="30" width="30" alt="Settings">
   </div>
   <div class="element-container">
+    <!-- Dark Mode Button -->
     <div class="float-element">
-      <img src="../assets/icons/moon.svg" height="25" width="25" alt="Dark Mode" id="toggle-dark-mode">
+      <img src="../assets/icons/moon.svg" height="30" width="30" alt="Dark Mode" id="toggle-dark-mode">
     </div>
+    <!-- Music Button -->
     <div class="float-element">
-      <img src="../assets/icons/music.svg" height="25" width="25" alt="Music" id="toggle-music">
+      <img src="../assets/icons/music.svg" height="30" width="30" alt="Music" id="toggle-music">
     </div>
   </div>
 </div>
