add setting button

--- a/footer.html
+++ b/footer.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/style.css">
-</head>
+
 
 <header class="top-footer">
   <div class="tabs">
@@ -19,14 +19,15 @@
   </div>
   <div class="site-name">@Data Structures Visualization</div>
 </header>
-זה
 <!-- GitHub Icon -->
 <div class="git-icon">
   <a href="https://github.com/erezofir" target="_blank">
     <img src="../assets/icons/git-circle.svg" alt="GitHub">
   </a>
 </div>
+</head>
 
+<body>
 <div class="floating-container">
   <div class="floating-button">
     <img src="../assets/icons/settings.svg" height="30" width="30" alt="Settings">
@@ -34,12 +35,13 @@
   <div class="element-container">
     <!-- Dark Mode Button -->
     <div class="float-element">
-      <img src="../assets/icons/moon.svg" height="30" width="30" alt="Dark Mode" id="toggle-dark-mode">
+      <img src="../assets/icons/moon.svg" height="25" width="25" alt="Dark Mode" id="toggle-dark-mode">
     </div>
     <!-- Music Button -->
     <div class="float-element">
-      <img src="../assets/icons/music.svg" height="30" width="30" alt="Music" id="toggle-music">
+      <img src="../assets/icons/music.svg" height="25" width="25" alt="Music" id="toggle-music">
     </div>
   </div>
 </div>
-
+</body>
+</html>
