--- a/footer.html
+++ b/footer.html
@@ -28,20 +28,21 @@
 </head>
 
 <body>
-<div class="floating-container">
-  <div class="floating-button">
-    <img src="../assets/icons/settings.svg" height="30" width="30" alt="Settings">
-  </div>
-  <div class="element-container">
-    <!-- Dark Mode Button -->
-    <div class="float-element">
-      <img src="../assets/icons/moon.svg" height="25" width="25" alt="Dark Mode" id="toggle-dark-mode">
+  <div class="floating-container">
+    <div class="floating-button">
+      <img src="assets/icons/settings.svg" alt="Settings" />
     </div>
-    <!-- Music Button -->
-    <div class="float-element">
-      <img src="../assets/icons/music.svg" height="25" width="25" alt="Music" id="toggle-music">
+    <div class="element-container">
+      <!-- Dark Mode Button -->
+      <div class="float-element">
+        <img src="assets/icons/moon.svg" alt="Dark Mode" id="toggle-dark-mode" />
+      </div>
+      <!-- Music Button -->
+      <div class="float-element">
+        <img src="assets/icons/music.svg" alt="Music" id="toggle-music" />
+      </div>
     </div>
   </div>
-</div>
+  
 </body>
 </html>
