--- a/footer.html
+++ b/footer.html
@@ -30,16 +30,16 @@
 <body>
   <div class="floating-container">
     <div class="floating-button">
-      <img src="assets/icons/settings.svg" alt="Settings" />
+      <img src="../assets/icons/settings.svg" alt="Settings" />
     </div>
     <div class="element-container">
       <!-- Dark Mode Button -->
       <div class="float-element">
-        <img src="assets/icons/moon.svg" alt="Dark Mode" id="toggle-dark-mode" />
+        <img src="../assets/icons/moon.svg" alt="Dark Mode" id="toggle-dark-mode" />
       </div>
       <!-- Music Button -->
       <div class="float-element">
-        <img src="assets/icons/music.svg" alt="Music" id="toggle-music" />
+        <img src="../assets/icons/music.svg" alt="Music" id="toggle-music" />
       </div>
     </div>
   </div>
