add setting button

--- a/index.html
+++ b/index.html
@@ -100,18 +100,19 @@
     </a>
   </div>
 
-  <div class="settings-menu">
-    <div class="settings-button">
+  <div class="floating-container">
+    <div class="floating-button">
       <img src="assets/icons/settings.svg" alt="Settings" />
     </div>
-    <div class="settings-options">
-      <div class="settings-option" id="toggle-dark-mode">
-        <img src="assets/icons/moon.svg" alt="Dark Mode" />
+    <div class="element-container">
+      <!-- Dark Mode Button -->
+      <div class="float-element">
+        <img src="assets/icons/moon.svg" alt="Dark Mode" id="toggle-dark-mode" />
       </div>
-      <div class="settings-option" id="toggle-music">
-        <img src="assets/icons/music.svg" alt="Music" />
+      <!-- Music Button -->
+      <div class="float-element">
+        <img src="assets/icons/music.svg" alt="Music" id="toggle-music" />
       </div>
-      <!-- ניתן להוסיף אופציות נוספות כאן -->
     </div>
   </div>
 
