add setting button

--- a/footer.html
+++ b/footer.html
@@ -4,45 +4,48 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/style.css">
-
-
-<header class="top-footer">
-  <div class="tabs">
-    <a href="../index.html">Home</a>
-    <a href="../data-structures/stack.html" class="data-structure-link">Stack</a>
-    <a href="../data-structures/queue.html" class="data-structure-link">Queue</a>
-    <a href="../data-structures/linked-list.html" class="data-structure-link">Linked List</a>
-    <a href="../data-structures/array.html" class="data-structure-link">Array</a>
-    <a href="../data-structures/hash-table.html" class="data-structure-link">Hash-Table</a>
-    <a href="../data-structures/heap.html" class="data-structure-link">Heap</a>
-    <a href="../data-structures/tree.html" class="data-structure-link">Tree</a>
-  </div>
-  <div class="site-name">@Data Structures Visualization</div>
-</header>
-<!-- GitHub Icon -->
-<div class="git-icon">
-  <a href="https://github.com/erezofir" target="_blank">
-    <img src="../assets/icons/git-circle.svg" alt="GitHub">
-  </a>
-</div>
+  <title>Footer</title>
 </head>
-
 <body>
-  <div class="floating-container">
-    <div class="floating-button">
-      <img src="../assets/icons/settings.svg" alt="Settings" />
-    </div>
-    <div class="element-container">
-      <!-- Dark Mode Button -->
-      <div class="float-element">
-        <img src="../assets/icons/moon.svg" alt="Dark Mode" id="toggle-dark-mode" />
+  <footer>
+    <!-- Top Footer -->
+    <header class="top-footer">
+      <div class="tabs">
+        <a href="../index.html">Home</a>
+        <a href="../data-structures/stack.html" class="data-structure-link">Stack</a>
+        <a href="../data-structures/queue.html" class="data-structure-link">Queue</a>
+        <a href="../data-structures/linked-list.html" class="data-structure-link">Linked List</a>
+        <a href="../data-structures/array.html" class="data-structure-link">Array</a>
+        <a href="../data-structures/hash-table.html" class="data-structure-link">Hash Table</a>
+        <a href="../data-structures/heap.html" class="data-structure-link">Heap</a>
+        <a href="../data-structures/tree.html" class="data-structure-link">Tree</a>
       </div>
-      <!-- Music Button -->
-      <div class="float-element">
-        <img src="../assets/icons/music.svg" alt="Music" id="toggle-music" />
+      <div class="site-name">@Data Structures Visualization</div>
+    </header>
+
+    <!-- GitHub Icon -->
+    <div class="git-icon">
+      <a href="https://github.com/erezofir" target="_blank">
+        <img src="../assets/icons/git-circle.svg" alt="GitHub">
+      </a>
+    </div>
+
+    <!-- Floating Actions -->
+    <div class="floating-container">
+      <div class="floating-button">
+        <img src="../assets/icons/settings.svg" alt="Settings" />
+      </div>
+      <div class="element-container">
+        <!-- Dark Mode Button -->
+        <div class="float-element">
+          <img src="../assets/icons/moon.svg" alt="Dark Mode" id="toggle-dark-mode" />
+        </div>
+        <!-- Music Button -->
+        <div class="float-element">
+          <img src="../assets/icons/music.svg" alt="Music" id="toggle-music" />
+        </div>
       </div>
     </div>
-  </div>
-  
+  </footer>
 </body>
 </html>
