--- a/data-structures/stack.html
+++ b/data-structures/stack.html
@@ -128,5 +128,11 @@
       </div>
     </section>
   </main>
+
+  <!-- Scripts -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.4/d3.min.js"></script>
+
+
 </body>
 </html>
