add setting button

--- a/data-structures/stack.html
+++ b/data-structures/stack.html
@@ -90,7 +90,7 @@
       <h2>Visualization</h2>
       <canvas id="stackCanvas" width="400" height="250"></canvas>
       <div class="controls">
-        <button onclick="pushItem(prompt('Enter value to push:'))">Push</button>
+        <button onclick="pushItem">Push</button>
         <button onclick="popItem()">Pop</button>
         <button onclick="clearAll()">Clear All</button>
       </div>
