add setting button

--- a/data-structures/stack.html
+++ b/data-structures/stack.html
@@ -88,11 +88,11 @@
     <!-- Visualization Section -->
     <section class="visualization box">
       <h2>Visualization</h2>
-      <canvas id="stackCanvas" width="400" height="250"></canvas>
+      <canvas id="stackCanvas" width="300" height="250"></canvas>
       <div class="controls">
-        <button onclick="pushButton">Push</button>
-        <button onclick="popItem()">Pop</button>
-        <button onclick="clearAll()">Clear All</button>
+        <button id="pushButton">Push</button>
+        <button id="popButton">Pop</button>
+        <button id="clearButton">Clear All</button>
       </div>
     </section>
 
