--- a/data-structures/stack.html
+++ b/data-structures/stack.html
@@ -90,9 +90,9 @@
       <h2>Visualization</h2>
       <canvas id="stackCanvas" width="300" height="250"></canvas>
       <div class="controls">
-        <button onclick="pushButton">Push</button>
-        <button onclick="popButton">Pop</button>
-        <button onclick="clearButton">Clear All</button>
+        <button onclick="pushButton()">Push</button>
+        <button onclick="popButton()">Pop</button>
+        <button onclick="clearButton()">Clear All</button>
       </div>
     </section>
 
