edit dtack operation

--- a/data-structures/stack.html
+++ b/data-structures/stack.html
@@ -94,6 +94,26 @@
         <button onclick="popButton()">Pop</button>
         <button onclick="clearButton()">Clear All</button>
       </div>
+      <div class="pointer-table">
+        <table>
+          <thead>
+            <tr>
+              <th>Pointer</th>
+              <th>Value</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>HEAD</td>
+              <td id="head-value">-1</td>
+            </tr>
+            <tr>
+              <td>TAIL</td>
+              <td id="tail-value">-1</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>      
     </section>
 
     <!-- Advantages and Disadvantages Section -->
