--- a/data-structures/stack.html
+++ b/data-structures/stack.html
@@ -89,7 +89,7 @@
     <section class="visualization box">
       <h2>Visualization</h2>
       <div class="stack-container">
-        <canvas id="stackCanvas" width="500" height="150"></canvas>
+        <canvas id="stackCanvas" width="200" height="300"></canvas>
         <div class="pointer-table">
           <table>
             <thead>
@@ -112,12 +112,14 @@
         </div>
       </div>
       <div class="controls">
+        <input type="text" id="stackInput" placeholder="Enter value" />
         <button onclick="pushButton()">Push</button>
         <button onclick="popButton()">Pop</button>
         <button onclick="clearButton()">Clear All</button>
       </div>
     </section>
 
+    
     <!-- Advantages and Disadvantages Section -->
     <section class="box">
       <h2>Advantages and Disadvantages</h2>
