--- a/data-structures/stack.html
+++ b/data-structures/stack.html
@@ -87,11 +87,10 @@
 
     <!-- Visualization Section -->
     <section class="visualization box">
-      <h2>Visualization</h2>
+      <h1>Visualization</h1>
       <div class="root">
-        <h1 class="title">Call Stack Visualizer</h1>
         <div class="controls">
-          <label for="stackInput" class="label">Enter next command below:</label>
+          <label for="stackInput" class="label">Enter next value below:</label>
           <input id="stackInput" class="input" type="text" placeholder="Enter value">
           <div class="buttons">
             <button class="button" onclick="handlePush()">Push</button>
