--- a/data-structures/stack.html
+++ b/data-structures/stack.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Stack Visualization</title>
   <link rel="stylesheet" href="../styles/style.css">
+  <link rel="stylesheet" href="css/stack.css">
   <link rel="stylesheet" href="../styles/ds.css">
   <link rel="stylesheet" href="../styles/stack.css">
 </head>
@@ -86,26 +87,13 @@
     </section>
 
     <!-- Visualization Section -->
-    <section class="visualization box">
-      <h1>Visualization</h1>
-      <div class="container">
-        <div class="controls">
-            <button id="pushBtn">Push</button>
-            <button id="popBtn">Pop</button>
-            <input type="text" id="stackInput" placeholder="Enter value">
-        </div>
-        
-        <div class="visualization">
-            <div class="stack-container">
-                <div class="stack-label">Call Stack</div>
-                <div id="stackVisualizer" class="stack">
-                    <!-- Stack frames will be added here dynamically -->
-                </div>
-                <div class="stack-bottom"></div>
-            </div>
-        </div>
+  <section class="visualization box">
+    <h1>Stack Visualizer</h1>
+    <div id="main-content">
+      <h1>Welcome to My Project</h1>
+      <div id="react-root"></div>
     </div>
-    </section>
+  </section>
 
 
     <!-- Advantages and Disadvantages Section -->
