--- a/data-structures/stack.html
+++ b/data-structures/stack.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Stack Visualization</title>
   <link rel="stylesheet" href="../styles/style.css">
-  <link rel="stylesheet" href="css/stack.css">
-  <link rel="stylesheet" href="../styles/ds.css">
   <link rel="stylesheet" href="../styles/stack.css">
+  <link rel="stylesheet" href="../styles/ds.css">
+  <script src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
+  <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
 </head>
 <body class="stack">
-
   <!-- Footer -->
   <div id="footer-placeholder"></div>
   <script>
@@ -88,9 +88,8 @@
 
     <!-- Visualization Section -->
   <section class="visualization box">
-    <h1>Stack Visualizer</h1>
     <div id="main-content">
-      <h1>Welcome to My Project</h1>
+      <h1>Stack Visualizer</h1>
       <div id="react-root"></div>
     </div>
   </section>
