--- a/data-structures/queue.html
+++ b/data-structures/queue.html
@@ -6,6 +6,7 @@
   <title>Queue Visualization</title>
   <link rel="stylesheet" href="../styles/style.css">
   <link rel="stylesheet" href="../styles/ds.css">
+  <link rel="stylesheet" href="../styles/queue.css">
   <script src="../scripts/visualizations/queue.js" defer></script>
 </head>
 <body class="queue">
