--- a/data-structures/linked-list.html
+++ b/data-structures/linked-list.html
@@ -6,7 +6,6 @@
   <title>Linked List Visualization</title>
   <link rel="stylesheet" href="../styles/style.css">
   <link rel="stylesheet" href="../styles/ds.css">
-  <script src="../scripts/visualizations/linked-list.js" defer></script>
 </head>
 <body class="linked-list">
 
@@ -132,5 +131,8 @@
     </section>
   </main>
 
+
+  <!-- Scripts -->
+  <script src="../scripts/visualizations/linked-list.js" defer></script>
 </body>
 </html>
