--- a/data-structures/queue.html
+++ b/data-structures/queue.html
@@ -6,8 +6,6 @@
   <title>Queue Visualization</title>
   <link rel="stylesheet" href="../styles/style.css">
   <link rel="stylesheet" href="../styles/ds.css">
-  <link rel="stylesheet" href="../styles/queue.css">
-  <script src="../scripts/visualizations/queue.js" defer></script>
 </head>
 <body class="queue">
 
@@ -127,5 +125,9 @@
       </div>
     </section>
   </main>
+
+
+  <!-- Scripts -->
+  <script src="../scripts/visualizations/queue.js" defer></script>
 </body>
 </html>
