--- a/data-structures/array.html
+++ b/data-structures/array.html
@@ -3,10 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Array Visualization</title>
+  <title>Array</title>
   <link rel="stylesheet" href="../styles/style.css">
   <link rel="stylesheet" href="../styles/ds.css">
-  <script src="../scripts/visualizations/array.js" defer></script>
 </head>
 <body class="array">
 
@@ -132,6 +131,7 @@
     </section>
   </main>
 
-
+  <!-- Scripts -->
+  <script src="../scripts/visualizations/array.js" defer></script>
 </body>
 </html>
