--- a/data-structures/hash-table.html
+++ b/data-structures/hash-table.html
@@ -86,15 +86,11 @@
     <!-- Visualization Section -->
     <section class="visualization box">
       <h2>Visualization</h2>
-      <canvas id="hashTableCanvas" width="400" height="300"></canvas>
-      <div class="controls">
-        <button onclick="insertKeyValue(prompt('Enter key:'), prompt('Enter value:'))">Insert</button>
-        <button onclick="searchKey(prompt('Enter key to search:'))">Search by Key</button>
-        <button onclick="deleteKey(prompt('Enter key to delete:'))">Delete</button>
-        <button onclick="clearHashTable()">Clear All</button>
-        <button onclick="searchValue(prompt('Enter value to search:'))">Search by Value</button>
-      </div>
-    </section>
+      <p class="coming-soon">
+    Maybe later! 😊<br>
+    In the meantime, you can see it in this <a href="https://www.youtube.com/watch?v=0Xv6wSguIlQ" target="_blank">short and clear video</a>.
+  </p>
+</section>
   </main>
 </body>
 </html>
