--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <a href="data-structures/linked-list.html" class="data-structure-link">Linked List</a>
       <a href="data-structures/array.html" class="data-structure-link">Array</a>
       <a href="data-structures/hash-table.html" class="data-structure-link">Hash-Table</a>
-      <a href="data-structures/heap.html" class="data-structure-link">Heap</a>
       <a href="data-structures/tree.html" class="data-structure-link">Tree</a>
+      <a href="data-structures/graph.html" class="data-structure-link">Graph</a>
     </div>
     <div class="site-name">@Data Structures Visualization</div>
   </header>
@@ -57,12 +57,6 @@
         </div>
       </div>
       <div class="pyramid-row">
-        <div class="circle fall-animation">
-          <a href="data-structures/heap.html">
-            <div class="icon" style="background-image: url('assets/icons/heap.svg');"></div>
-            <h3>Heap</h3>
-          </a>
-        </div>
         <div class="circle fall-animation">
           <a href="data-structures/linked-list.html">
             <div class="icon" style="background-image: url('assets/icons/linked-list.svg');"></div>
